# receipts

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  STATUS.md  alembic.ini  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-external-writeback.sh  block-phi-export.sh  stamp-judge-call.sh  stop-regression.sh
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_clinical.py
fixtures/regression/: kappa_pairs.jsonl  kappa_pairs_bad.jsonl  (+2 more)
scripts/: gen_clinical_fixture.py  gen_drafter_fixtures.py  gen_eng_fixture.py  verify_kappa.py  verify_passk.py
tests/: _hooks_harness.py  conftest.py  test_cli_clin.py  test_cli_eng.py  test_clinical_emitter.py  test_clinical_reconciler.py  test_connector_fhir.py  test_connector_github.py  test_connector_granola.py  test_connector_linear.py  test_connector_scribe.py  test_connector_slack.py  test_drafter_encounter.py  test_drafter_fixtures.py  test_drafter_llm_clinical.py  test_drafter_llm_path.py  test_drafter_spec.py  test_eng_emitter.py  test_eng_reconciler.py  test_fixture_clinical_week.py  test_fixture_eng_week.py  test_hooks_harness.py  test_hooks_safety.py  test_judge_dual.py  test_judge_hallucination.py  test_judge_kappa.py  test_judge_kappa_script.py  test_judge_l0.py  test_judge_l1.py  test_judge_l2.py  test_judge_passk.py  test_judge_replay.py  test_ledger_clinical_schema.py  test_ledger_exports.py  test_ledger_merkle.py  test_ledger_object_lock.py  test_ledger_queries.py  test_ledger_run_log.py  test_ledger_schema.py  test_phase1_e2e.py  (+4 more)
(+111 files in other folders)
