[project]
name = "receipts"
version = "0.1.0"
description = "Append-only intent-vs-execution attestation ledger"
requires-python = ">=3.12,<3.15"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "boto3>=1.34",
    "moto[s3]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/receipts"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "fixtures",
    "results",
    "alembic/versions",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
asyncio_mode = "auto"
